--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Vcs-Git: git://git.debian.org/git/collab-maint/mitmproxy.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/mitmproxy.git
 
 Package: mitmproxy
-Architecture: any
+Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}, python-urwid, python-openssl, python-pyasn1, python-imaging, python-lxml, python-netlib (>= 0.9~)
 Provides: ${python:Provides}
 Description: SSL-capable man-in-the-middle HTTP proxy
